Fixe index background responsive

--- a/public/assets/css/_jean-forteroche.scss
+++ b/public/assets/css/_jean-forteroche.scss
@@ -64,33 +64,43 @@ header {
 }
 
 .content_header {
-    margin: 23% 10% 33vh 15%;
-    ;
+    padding: 22% 10% 33vh 15%;
 
     .bg1 {
+        background-image: url("../img/bg.png");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
         position: absolute;
         left: 0;
-        min-height: 100vh;
         top: 0;
+        min-height: 100vh;
         z-index: -1;
         width: 100%;
-        border-bottom: solid 185px $color-white;
     }
 
     .bg2 {
+        background-image: url("../img/bg_2.png");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
         position: absolute;
         left: 0;
-        min-height: 100vh;
         top: 0;
+        min-height: 100vh;
         z-index: -2;
         width: 100%;
     }
 
     .bg3 {
+        background-image: url("../img/bg_3.png");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
         position: absolute;
         left: 0;
-        min-height: 100vh;
         top: 0;
+        min-height: 100vh;
         z-index: -3;
         width: 100%;
     }
@@ -109,6 +119,7 @@ header {
 }
 
 .rs {
+    margin-bottom: 20px;
     margin-left: 10%;
     cursor: pointer;
     font-size: 20px;
@@ -118,8 +129,8 @@ header {
 /*----------------------------LISTE DES ROMANS-----------------------------*/
 
 .list_roman {
-    margin-top: 10%;
-
+    background-color: $color-white;
+    padding-top: 10%;
     #list {
         display: none;
         margin-left: 15%;
@@ -166,7 +177,7 @@ header {
             @include font(20px, 200, 30px, $color-black);
             position: absolute;
             font-family: "Open Sans";
-            top: 139%;
+            top: 140%;
             left: 26.4%;
             width: 30%;
         }
@@ -255,7 +266,7 @@ header {
 /*----------------------------BOUTIQUE-----------------------------*/
 
 .shop {
-    margin-top: 20%;
+    margin-top: 16%;
     width: 100%;
     background-color: $color-grey;
 
