--- a/views/elements/home.phtml
+++ b/views/elements/home.phtml
@@ -1,13 +1,13 @@
 <!-- CONTENT HEADER -->
 
 <div class="content_header">
-    <img class="rellax bg1" src="public/assets/img/bg.png" data-rellax-speed="6" title="©Erik Almas">
-    <img class="rellax bg2" src="public/assets/img/bg_2.png" data-rellax-speed="2" title="©Erik Almas">
-    <img class="rellax bg3" src="public/assets/img/bg_3.png" data-rellax-speed="-1" title="©Erik Almas">
+    <img class="bg1">
+    <img class="rellax bg2" data-rellax-speed="-5">
+    <img class="rellax bg3" data-rellax-speed="-8">
     <h1>écrivain,<br>acteur</h1>
     <p>Découvrez mes nouveaux romans en ligne </p>
 </div>
-<div class="rellax rs" data-rellax-speed="4">
+<div class="rs" >
     <i class="fab fa-twitter-square"></i>
     <i class="fab fa-facebook-square"></i>
     <i class="fab fa-instagram"></i>
